# runit-man-rust

./: Cargo.toml
src/: config.rs  installer.rs  main.rs  manage_service.rs  service_info.rs  service_logs.rs  services.rs  web_ui.rs
src/application/: installer.rs  manage_service.rs  mod.rs  service_info.rs
src/domain/: mod.rs  service.rs  service_logs.rs
src/presentation/: mod.rs  web_api.rs  web_ui.rs
src/presentation/templates/service/: log_run  run
src/presentation/templates/web/: logs.html
templates/service/: run
templates/web/: index.html
