[package]
name = "runit-man-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-web-httpauth = "0.7"
tokio = { version = "1", features = ["full"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.0"  # For templating
log = "0.4"
env_logger = "0.9"
include_dir = "0.7.4"
tempfile = "3.14.0"
tinytemplate = "1.2.1"
clap = { version = "4.5.22", features = ["derive", "env"] }
