[package]
name = "runit-ui"
version = "0.1.0"
edition = "2021"
include = ["templates/**"]

[dependencies]
actix-web = "4.0"
actix-web-httpauth = "0.8"
tokio = { version = "1", features = ["full"] }
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.0"  # For templating
log = "0.4"
env_logger = "0.11"
include_dir = { version = "0.7.4", features = ["glob"] }
tempfile = "3.14.0"
tinytemplate = "1.2.1"
clap = { version = "4.5.22", features = ["derive", "env"] }
regex = "1.11.1"
glob = { version = "0.3.1", optional = true }
anyhow = "1.0.94"
rev_lines = "0.3.0"

